Navbar added to index.html

--- a/bottle-shop.html
+++ b/bottle-shop.html
@@ -24,17 +24,17 @@
         <!-- Navbar -->
         
         <nav class="navbar navbar-expand-lg navbar-dark justify-content-center navbar-custom">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarText" aria-expanded="true" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             
             <div class="collapse navbar-collapse justify-content-center menu" id="navbarNavDropdown">
                 <ul class="navbar-nav navbar-center">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Bottle Shop</a>
+                        <a class="nav-link active" href="bottle-shop.html">Bottle Shop</a>
                     </li> 
                     <li class="nav-item">
                         <a class="nav-link" href="#">Breweries</a>
