--- a/contact-us.html
+++ b/contact-us.html
@@ -24,7 +24,7 @@
         <!-- Navbar -->
         
         <nav class="navbar navbar-expand-lg navbar-dark justify-content-center navbar-custom">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarText" aria-expanded="true" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             
