--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <p class="information">Phone: 07801 784 231</p>
             </div>
             <div class="col-sm-4 footer-menu">
-                <h4 class="headings">Social</h4>
+                <h4 class="headings">Find Us On</h4>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
                         <a target="_blank" href="https://www.facebook.com">
@@ -95,7 +95,11 @@
                 </ul>
             </div>
             <div class="col-sm-4 footer-menu">
-                <h4 class="headings">Sign Up/Sign In</h4>
+                <h4 class="headings">Sign In/Sign Up</h4>
+                <a href="#">
+                    <i class="fas fa-beer" id="beer-sign" aria-hidden="true"></i>
+                    <span class="sr-only">Beer Sign Up</span>
+                </a>
             </div>
 
         </div>
