jumbotron added to index.html

--- a/index.html
+++ b/index.html
@@ -90,6 +90,19 @@
     </header>
 
     <section> 
+        <div class="container mt-4">
+            <div class="shadow p-3 mb-5 bg-white rounded">
+            <div class="jumbotron text-center">
+                <h2>New Year, New Beer!</h2>
+                <h1 class="display-4">Scottish Craft Beer Dropped At Your Door!</h1>
+                <p class="lead">Grab a mixed case of some of Scotlands best artisan and craft beers.</p>
+                <hr class="my-4">
+                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+                <button class="btn btn-md sign-up-button" data-toggle="modal" data-target="#signUpModal" role="button">Sign Up</button>
+                <p class="text-black-50"><small>Subscibers must be at least 18 years of age. Keep calm and drink responsibly</small></p>
+            </div>
+            </div>
+        </div>
 
     </section>
 
