--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </header>
 
     <section> 
-        <div class="container mt-4">
+        <div class="container-fluid mt-4 hero-image">
             <div class="shadow p-3 mb-5 bg-white rounded">
             <div class="jumbotron text-center">
                 <h2>New Year, New Beer!</h2>
