Jumbotron completed on index.html

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
     </header>
 
     <section> 
+        <!-- Jumbotron -->
         <div class="container-fluid hero-image"> 
             <div class="opaque-overlay">&nbsp;</div>
             <div class="row">
@@ -97,16 +98,34 @@
                     <div class="jumbotron text-center">
                         <h2>New Year, New Beer!</h2>
                         <h1 class="display-4">Scottish Craft Beer Dropped At Your Door!</h1>
-                        <p class="lead">Grab a mixed case of some of Scotlands best artisan and craft beers.</p>
-                        <hr class="my-4">
-                        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+                        <p class="lead d-none d-md-block">Grab a mixed case of some of Scotlands best artisan and craft beers.</p>
+                        <hr>
+                        <p class="jumbotron-text">Sign up today and you'll receive 12 beers every month!</p>
+                        <p class="jumbotron-text">£24.99</p>
+                        <p class="jumbotron-text"><strong>First Month is on us!</strong></p>
                         <button class="btn btn-md sign-up-button" data-toggle="modal" data-target="#signUpModal" role="button">Sign Up</button>
-                        <p class="text-white-50"><small>Subscibers must be at least 18 years of age. Keep calm and drink responsibly</small></p>
+                        <p class="jumbotron-text"><small>Subscibers must be at least 18 years of age. Keep calm and drink responsibly</small></p>
                     </div>  
                 </div>
             </div>
         </div>
 
+    </section>
+
+    <section>
+        <div class="container-wrapper">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h3>Come see our bottle shop</h3>
+                    </div>
+                    <div class="col-sm 6">
+                        <h3>Visit the breweries</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
     </section>
 
     <footer class="container-fluid">
