fixing jumbotron responsiveness

--- a/index.html
+++ b/index.html
@@ -96,13 +96,12 @@
             <div class="row">
                 <div class="col-12">      
                     <div class="jumbotron text-center">
-                        <h2>New Year, New Beer!</h2>
-                        <h1 class="display-4">Scottish Craft Beer Dropped At Your Door!</h1>
+                        <h2 class="d-none d-sm-block">New Year, New Beer!</h2>
+                        <h1 class="display-4">Scottish Craft Beer To Your Door!</h1>
                         <p class="lead d-none d-md-block">Grab a mixed case of some of Scotlands best artisan and craft beers.</p>
                         <hr>
                         <p class="jumbotron-text">Sign up today and you'll receive 12 beers every month!</p>
-                        <p class="jumbotron-text">£24.99</p>
-                        <p class="jumbotron-text"><strong>First Month is on us!</strong></p>
+                        <p class="jumbotron-text">£24.99<strong> First Month is on us!</strong></p>
                         <button class="btn btn-md sign-up-button" data-toggle="modal" data-target="#signUpModal" role="button">Sign Up</button>
                         <p class="jumbotron-text"><small>Subscibers must be at least 18 years of age. Keep calm and drink responsibly</small></p>
                     </div>  
