features section updated

--- a/index.html
+++ b/index.html
@@ -111,19 +111,42 @@
 
     </section>
 
-    <section>
-        <div class="container-wrapper">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h3>Come see our bottle shop</h3>
+    <section class="features-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 features">
+                    <div class="card mx-auto" style="width:18rem;">
+                        <img src="https://images.unsplash.com/photo-1589711428920-bf084b80e0bd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Beers</h5>
+                            <p class="card-text">Explore our range of beers</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
                     </div>
-                    <div class="col-sm 6">
-                        <h3>Visit the breweries</h3>
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 features">
+                    <div class="card mx-auto" style="width: 18rem;">
+                        <img src="https://images.unsplash.com/photo-1528823872057-9c018a7a7553?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Breweries</h5>
+                            <p class="card-text">Find out about the Breweries</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 features">
+                    <div class="card mx-auto" style="width: 18rem;">
+                        <img src="https://images.unsplash.com/photo-1528823872057-9c018a7a7553?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Pick Your Box</h5>
+                            <p class="card-text">Select your preferences</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+            
         
     </section>
 
@@ -199,8 +222,8 @@
                             <input type="password" class="form-control" id="repeat-password" placeholder="Repeat Password">
                         </div>
                         <div class="form-group form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                            <input type="checkbox" class="form-check-input" id="remember-me">
+                            <label class="form-check-label" for="remember-me">Remember Me</label>
                         </div>
                         <button type="submit" class="btn sign-up-button">Submit</button>
                     </form>
