--- a/our-story.html
+++ b/our-story.html
@@ -55,6 +55,41 @@
 
     <section> 
 
+        <div class="container-fluid">
+            <div class="row no-gutters">
+                <div class="col-sm-4 home-image-links">
+                    <div class="card bg-dark text-white">
+                        <img src="https://images.unsplash.com/photo-1559818454-1b46997bfe30?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1534&q=80" class="card-img" alt="Beers on a bar">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Beers</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Last updated 3 mins ago</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 home-image-links">
+                    <div class="card bg-dark text-white">
+                        <img src="https://images.unsplash.com/photo-1528823872057-9c018a7a7553?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img" alt="Beers on a bar">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Breweries</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Last updated 3 mins ago</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 home-image-links">
+                    <div class="card bg-dark text-white">
+                        <img src="https://images.unsplash.com/photo-1528823872057-9c018a7a7553?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img" alt="Beers on a bar">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Breweries</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Last updated 3 mins ago</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </section>
 
     <footer>
