tartan border, and shadow added to cards on index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <a class="nav-link" href="#">Breweries</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Our Story</a>
+                        <a class="nav-link" href="#">Customize Your Crate</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact Us</a>
@@ -98,7 +98,7 @@
                     <div class="jumbotron text-center">
                         <h2 class="d-none d-sm-block">New Year, New Beer!</h2>
                         <h1 class="display-4">Scottish Craft Beer To Your Door!</h1>
-                        <p class="lead d-none d-md-block">Grab a mixed case of some of Scotlands best artisan and craft beers.</p>
+                        <p class="lead d-none d-md-block">Grab a mixed crate of some of Scotlands best artisan and craft beers.</p>
                         <hr>
                         <p class="jumbotron-text">Sign up today and you'll receive 12 beers every month!</p>
                         <p class="jumbotron-text">£24.99<strong> First Month is on us!</strong></p>
@@ -115,32 +115,32 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 features">
-                    <div class="card mx-auto" style="width:18rem;">
-                        <img src="https://images.unsplash.com/photo-1589711428920-bf084b80e0bd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img-top" alt="...">
+                    <div class="card mx-auto text-center" style="width:18rem;">
+                        <img src="https://images.unsplash.com/photo-1589711428920-bf084b80e0bd?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img-top" alt="beers on counter">
                         <div class="card-body">
                             <h5 class="card-title">Beers</h5>
                             <p class="card-text">Explore our range of beers</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="bottle-shop.html" class="btn btn-sm card-button">Click here</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 features">
-                    <div class="card mx-auto" style="width: 18rem;">
-                        <img src="https://images.unsplash.com/photo-1528823872057-9c018a7a7553?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img-top" alt="...">
+                    <div class="card mx-auto text-center" style="width: 18rem;">
+                        <img src="https://images.unsplash.com/photo-1528823872057-9c018a7a7553?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img-top" alt="brewery tanks">
                         <div class="card-body">
                             <h5 class="card-title">Breweries</h5>
                             <p class="card-text">Find out about the Breweries</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="breweries.html" class="btn btn-sm card-button">Click here</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-4 features">
-                    <div class="card mx-auto" style="width: 18rem;">
-                        <img src="https://images.unsplash.com/photo-1528823872057-9c018a7a7553?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img-top" alt="...">
+                    <div class="card mx-auto text-center" style="width: 18rem;">
+                        <img src="https://images.unsplash.com/photo-1577670772839-befb49f0bee5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=751&q=80" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Pick Your Box</h5>
+                            <h5 class="card-title">Customize Your Crate</h5>
                             <p class="card-text">Select your preferences</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="customize-your-crate.html" class="btn btn-sm card-button">Click here</a>
                         </div>
                     </div>
                 </div>
