--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <p class="lead d-none d-md-block">Grab a mixed crate of some of Scotlands best artisan and craft beers.</p>
                         <hr>
                         <p class="jumbotron-text">Sign up today and you'll receive 12 beers every month!</p>
-                        <p class="jumbotron-text">£24.99<strong> First Month is on us!</strong></p>
+                        <p class="jumbotron-text">From just £12.99<strong> First Month is on us!</strong></p>
                         <button class="btn btn-md sign-up-button" data-toggle="modal" data-target="#signUpModal" role="button">Sign Up</button>
                         <p class="jumbotron-text"><small>Subscibers must be at least 18 years of age. Keep calm and drink responsibly</small></p>
                     </div>  
