--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <a class="nav-link" href="crates.html">Customize Your Crate</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="contact-us.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
