--- a/contact-us.html
+++ b/contact-us.html
@@ -92,7 +92,7 @@
     <section class="content-background">
         <div class="container-fluid">
             <div class="row">
-                <div class="col">
+                <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
                     <h2 class="faq-headings text-center">FAQ's</h2>
                     <p class="context-text text-center"><small>Click on questions to see the answers.</small></p>
                     <br>
@@ -118,6 +118,31 @@
                         <summary><strong>Are there any hidden fees or cancellation costs?</strong></summary>
                         <p>No. There are no hidden fees, and no additional costs to pause or cancel your subscription</p>
                     </details>
+                </div>
+                <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                    <form>
+                        <div class="row">
+                            <div class="col">
+                            <input type="text" class="form-control" placeholder="First name">
+                            </div>
+                            <div class="col">
+                            <input type="text" class="form-control" placeholder="Last name">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+                                    <label for="exampleInputEmail1">Email address</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleFormControlTextarea1">Example textarea</label>
+                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
 
